--- a/giveaway.html
+++ b/giveaway.html
@@ -6,7 +6,7 @@
     <title>Сайт с логотипом</title>
     <style>
         body {
-            font-family: Impact, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
